--- a/XFAspNetCoreDITemplate.iOS/Info.plist
+++ b/XFAspNetCoreDITemplate.iOS/Info.plist
@@ -23,9 +23,9 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>XFAspNetCoreDITemplate</string>
+    <string>$safeprojectname$</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.XFAspNetCoreDITemplate</string>
+    <string>com.companyname.$ext_safeprojectname$</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
