--- a/XFAspNetCoreDITemplate/XFAspNetCoreDITemplate.csproj
+++ b/XFAspNetCoreDITemplate/XFAspNetCoreDITemplate.csproj
@@ -11,6 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <Compile Remove="ViewModels\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <EmbeddedResource Remove="ViewModels\**" />
+    <None Remove="Services\**" />
+    <None Remove="ViewModels\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Include="appsettings.json" Condition="'$(Configuration)' != 'Debug' or !Exists('appsettings.Development.json')" />
     <EmbeddedResource Include="appsettings.Development.json" Link="appsettings.json" Condition="'$(Configuration)' == 'Debug' and Exists('appsettings.Development.json')" />
   </ItemGroup>
@@ -19,11 +28,6 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.967" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
 
   <ItemGroup>
