--- a/XFAspNetCoreDITemplate.iOS/XFAspNetCoreDITemplate.iOS.csproj
+++ b/XFAspNetCoreDITemplate.iOS/XFAspNetCoreDITemplate.iOS.csproj
@@ -124,16 +124,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting">
-      <Version>3.1.5</Version>
+      <Version>3.1.6</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.967" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\$ext_safeprojectname$\$ext_safeprojectname$.csproj">
+    <ProjectReference Include="..\XFAspNetCoreDITemplate\XFAspNetCoreDITemplate.csproj">
       <Project>{7DD7EBB5-8DCB-428D-A7B2-FE93EE1EFC89}</Project>
-      <Name>$ext_safeprojectname$</Name>
+      <Name>XFAspNetCoreDITemplate</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
